# CPAR

./: .gitignore
PythonConverter/: README.txt  converted.csv  converted_3_papi.csv  converter.py  script.sh
PythonConverter/converted/: cpp-papi-lbc.csv  cpp-papi-lbc1t.csv  cpp-papi-lbc2t.csv  cpp-papi-lbc3t.csv  cpp-papi-lbc4t.csv  cpp-papi-lbl.csv  cpp-papi-lbl1t.csv  cpp-papi-lbl2t.csv  cpp-papi-lbl3t.csv  cpp-papi-lbl4t.csv
benchmarks/hugo/old-openmp-implementation/c#-dotnet/1/: 1000_3.txt  1000_4.txt  1000_6.txt  1400_1.txt  1400_2.txt  1400_5.txt  1800_6.txt  2600_2.txt  2600_4.txt  2600_6.txt  3000_1.txt  3000_5.txt  3000_6.txt  600_4.txt
benchmarks/hugo/old-openmp-implementation/c#-dotnet/2/: 10000_2.txt  10000_3.txt  10000_5.txt  2200_5.txt  2200_6.txt  3000_1.txt  3000_2.txt  3000_6.txt  4000_3.txt  6000_2.txt  600_1.txt  8000_4.txt  8000_5.txt  8000_6.txt
benchmarks/hugo/old-openmp-implementation/converted/: c#-perf-lbc.csv  cpp-papi-lbc.csv  cpp-papi-lbl.csv  cpp-papi-lbl1t.csv  cpp-papi-lbl2t.csv  cpp-papi-lbl3t.csv  cpp-papi-lbl4t.csv  java-perf-lbc.csv
benchmarks/hugo/old-openmp-implementation/cpp-benchPapi/1/: 1000_1.txt  1000_6.txt  1400_1.txt  1400_4.txt  1400_5.txt  1800_1.txt  1800_3.txt  1800_5.txt  2200_1.txt  2200_2.txt  2200_3.txt  2200_4.txt  2200_5.txt  2600_1.txt  2600_3.txt  2600_4.txt  2600_5.txt  2600_6.txt  3000_5.txt  3000_6.txt  600_1.txt  600_2.txt
benchmarks/hugo/old-openmp-implementation/cpp-benchPapi/10/: 1000_1.txt  1000_4.txt  1000_5.txt  1000_6.txt  1400_1.txt  1400_2.txt  1400_3.txt  1400_6.txt  1800_1.txt  1800_3.txt  1800_4.txt  1800_6.txt  2200_1.txt  2200_3.txt  2200_4.txt  (+5 more)
benchmarks/potter/new-openmp-implementation/converted/: c#-perf-lbc.csv  cpp-papi-lbc1t.csv  cpp-papi-lbc2t.csv  cpp-papi-lbl1t.csv  cpp-perf-lbl.csv  java-perf-lbl.csv
benchmarks/potter/old-openmp-implementation/converted/: c#-perf-lbl.csv  cpp-papi-lbc3t.csv  cpp-papi-lbl.csv  cpp-papi-lbl2t.csv
examples/matrixprod/: CMakeLists.txt  makefile
examples/matrixprod/src/: matrix.cpp  matrix.hpp  matrixprod.cpp
projeto1/PythonConverter/: converter.py  script.sh
projeto1/c#/: run.sh
projeto1/c#/dotnet/: Program.cs  bench.sh  run.sh  vcode.csproj
projeto1/c#/matrixprod/: matrixprod.sln  matrixprod.userprefs
projeto1/c#/matrixprod/matrixprod/: Matrix.cs  Program.cs  matrixprod.csproj  matrixprod.sln  matrixprod.userprefs
projeto1/c#/mono/matrixprod/: bench.sh  matrixprod.userprefs  run.sh
projeto1/cpp/: benchPapi.sh  benchPerf.sh  makefile
projeto1/cpp/src/: matrix.cpp  matrix.hpp  matrixprod.cpp  papi.cpp  papi.hpp
projeto1/go/: makefile
projeto1/go/src/matrixprod/: matrix.go  matrixprod.go
projeto1/golang/: bench.sh  run.sh
projeto1/golang/src/matrixprod/: matrix.go  matrixprod.go
projeto1/java/: bench.sh  makefile  run.sh
projeto1/java/src/Java/: Matrix.java  Matrixprod.java
projeto1/java/src/matrixprod/: Matrix.java  Matrixprod.java
projeto1/python/: bench.sh  makefile  matrix.py  matrixprod.py  run.sh
projeto2/: benchmarks.sh
projeto2/benchmarks3-4May/: i-sequential.csv  ii-openmp.csv  iii-mpi.csv  iv-mpiOpenmp.csv
projeto2/benchmarks9-10May/: i-sequential-improved.csv  i-sequential.csv  ii-openmp-improved.csv  ii-openmp.csv  iii-mpi.csv  iv-mpiOpenmp.csv
projeto2/host_files/: host_file_1pc  host_file_2pc  host_file_3pc  host_file_4pc  host_file_local
projeto2/i-sequential/: CMakeLists.txt  benchmark.sh  makefile
projeto2/i-sequential-improved/: CMakeLists.txt  benchmark.sh  makefile
projeto2/i-sequential-improved/src/: main.cpp
projeto2/i-sequential/src/: main.cpp  testingEven.c
projeto2/ii-openmp/: CMakeLists.txt  benchmark.sh  makefile
projeto2/ii-openmp-improved/: CMakeLists.txt  benchmark.sh  makefile
projeto2/ii-openmp-improved/src/: main.cpp
projeto2/ii-openmp/src/: main.c  main.cpp
projeto2/iii-mpi/: CMakeLists.txt  benchmark.sh  makefile
projeto2/iii-mpi-improved/: benchmark.sh  makefile
projeto2/iii-mpi-improved/src/: main.cpp
projeto2/iii-mpi/src/: MPItest  host_file  hostfile  main.cpp  temp.txt
projeto2/iv-mpiOpenmp/: CMakeLists.txt  benchmark.sh  host_file  makefile
projeto2/iv-mpiOpenmp-improved/: benchmark.sh  makefile
projeto2/iv-mpiOpenmp-improved/src/: main.cpp
projeto2/iv-mpiOpenmp/src/: MPItest  main.cpp  temp.txt
(+2286 files in other folders)
